Se añadio las configuraciones para oauth2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,7 +79,7 @@ services:
       registry-service:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8081/actuator/health"]
+      test: ["CMD", "curl", "-f", "http://127.0.0.1:8081/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -102,12 +102,35 @@ services:
         condition: service_healthy
       ms-productos:
         condition: service_healthy
+      oauth-server:
+        condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8083/actuator/health"]
       interval: 30s
       timeout: 10s
       retries: 5
       start_period: 100s
+    networks:
+      - microservicios
+  # OAuth Server
+  oauth-server:
+    build: ./oauth-server
+    container_name: oauth-server
+    ports:
+      - "9000:9000"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    depends_on:
+      registry-service:
+        condition: service_healthy
+      ms-config-server:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/actuator/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 60s
     networks:
       - microservicios
 
